animation needed, added cone sliding on homepage. Added html overflow-x limit as hack for absolute positioning issue and main height 0, something I'll have to look out for in future and breaking everything if I try to fix it now. Next time no float probably.

--- a/style/main.css
+++ b/style/main.css
@@ -126,10 +126,26 @@ footer {
     display: none;
 }
 
+/*
+.home-main {
+    clear: both;
+    position: relative;
+    overflow: hidden;
+    height: 50%;
+}
+*/
+
 .home-img {
     min-width: 156px;
     max-width: 1920px;
     margin-right: 64px;
+    
+    animation-name: slide-right;
+    animation-duration: 10s;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+    animation-play-state: running;
+   
 }
 
 .link-button {
@@ -160,6 +176,15 @@ footer {
     box-shadow: 24px 16px 16px var(--blue3);
 }
 
+@keyframes slide-right {
+    0% {
+        right: -40%;
+        
+    }
+    100% {
+        right: 90%;
+    }
+}
 
 @media all and (max-width: 576px) {
     .desktop {
